# vacuum-os2

./: Makefile  vacuum.map
src/plugins/vacuum_otr/: CMakeLists.txt  DEFINES.otre2e.rsp  INCPATH.otre2e.rsp  Makefile  OBJECTS.otre2e.rsp  OtrInternal.cpp  OtrInternal.hpp  OtrMessaging.cpp  OtrMessaging.hpp  PsiOtrConfig.cpp  PsiOtrConfig.hpp  config.inc  i_otr_datasource.h  libtool  optionswidget.cpp  optionswidget.h  otre2e.cmake  otre2e.cpp  otre2e.h  otre2e.map  otre2e.pri  otre2e.pro  stanza_catchers.cpp  stanza_catchers.h  translations.inc
src/plugins/vacuum_otr/.hg/: branch  branchheads.cache  dirstate  hgrc  tags.cache  undo.desc
src/plugins/vacuum_otr/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
src/plugins/vacuum_otr/.hg/store/data/: _c_make_lists.txt.i  _makefile.i  _otr_internal.cpp.i  _otr_internal.hpp.i  _otr_messaging.cpp.i  _otr_messaging.hpp.i  _psi_otr_config.cpp.i  _psi_otr_config.hpp.i  config.inc.i  i__otr__datasource.h.i  install.cmake.i  moc__otre2e.cpp.i  optionswidget.cpp.i  optionswidget.h.i  otre2e.cmake.i  otre2e.cpp.i  otre2e.h.i  otre2e.pri.i  otre2e.pro.i  otre2e.pro.user.i  stanza__catchers.cpp.i  stanza__catchers.h.i  translations.cmake.i  translations.inc.i
src/plugins/vacuum_otr/.hg/store/data/translations/: tsrelease.bat.i  tsrelease.sh.i  tstranslate.bat.i  tsupdate.bat.i  tsupdate.sh.i
src/plugins/vacuum_otr/.hg/store/data/translations/.tx/: config.i
src/plugins/vacuum_otr/definitions/.svn/: entries
src/plugins/vacuum_otr/interfaces/.svn/: all-wcprops  entries
src/plugins/vacuum_otr/translations/.tx/: config
src/plugins/vacuum_otr/translations/en/: otre2e.ts
src/plugins/vacuum_otr/translations/pl/: otre2e.ts
src/plugins/vacuum_otr/translations/ru/: otre2e.qm  otre2e.ts
src/plugins/vacuum_otr/utils/: INCPATH.vacuumu.rsp  Makefile  moc_action.cpp  moc_advanceditemdelegate.cpp  moc_animatedtextbrowser.cpp  moc_closebutton.cpp  moc_filestorage.cpp  moc_iconstorage.cpp  moc_menu.cpp  moc_menubarchanger.cpp  moc_options.cpp  moc_searchlineedit.cpp
src/plugins/vacuum_otr/utils/.svn/: all-wcprops
(+1098 files in other folders)
